<resources>
    <string name="app_name">Linxy</string>
    <string name="title">Title</string>
    <string name="url">url</string>
    <string name="no_network">Internet connection unavailable</string>
    <string name="settings">Settings</string>
    <string name="not_authorized">Not authorized to scan</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="camera_failed">Camera failed to open</string>
    <string name="title_activity_privacy_policy">PrivacyPolicy</string>
    <string name="artibutationdata"><![CDATA[Retrofit http://square.github.io/retrofit/ Copyright 2013 Square, Inc. Licensed under the Apache License, Version 2.0 (the “License”); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an “AS IS” BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.  ActiveAndroid http://www.activeandroid.com/ Copyright (C) 2010 Michael Pardo Licensed under the Apache License, Version 2.0 (the “License”); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an “AS IS” BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.  Butter Knife http://jakewharton.github.io/butterknife/ Copyright 2013 Jake Wharton Licensed under the Apache License, Version 2.0 (the “License”); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an “AS IS” BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.  Timber https://github.com/JakeWharton/timber Copyright 2013 Jake Wharton  Licensed under the Apache License, Version 2.0 (the “License”); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an “AS IS” BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.  OkHttp http://square.github.io/okhttp/ Copyright 2014 Square, Inc. Licensed under the Apache License, Version 2.0 (the “License”); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an “AS IS” BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.  Dagger  http://square.github.io/dagger/ Copyright 2013 Square, Inc. Licensed under the Apache License, Version 2.0 (the “License”); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an “AS IS” BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.  ez-vcard https://github.com/mangstadt/ez-vcard Copyright (c) 2012-2015, Michael Angstadt All rights reserved. Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met: 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer. 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS “AS IS” AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. The views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of the FreeBSD Project.  Joda-Time http://www.joda.org/joda-time/index.html Licensed under the Apache License, Version 2.0 (the “License”); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an “AS IS” BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.  Otto http://square.github.io/otto/ Copyright 2013 Square, Inc. Licensed under the Apache License, Version 2.0 (the “License”); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an “AS IS” BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.  Picasso http://square.github.io/picasso/ Copyright 2013 Square, Inc.  Licensed under the Apache License, Version 2.0 (the “License”); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an “AS IS” BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.  YouTube Android Player API https://developers.google.com/youtube/android/player/downloads/ licensed under the Apache 2.0 License http://developer. android.com/license.html  Project Ne10 http://projectne10.github.io/Ne10/ License: BSD 3-clause, http://opensource.org/licenses/BSD-3-Clause  Zxing https://github.com/zxing/zxing License: Apache 2.0, http://www.apache.org/licenses/LICENSE- 2.0.html  Yajl  http://lloyd.github.io/yajl/ License: ISC License, http://opensource.org/licenses/ISC  GSON https://code.google.com/p/google-gson/ License: Apache 2.0, http://www.apache.org/licenses/LICENSE- 2.0.html  Biweekly https://github.com/mangstadt/biweekly Copyright (c) 2013-2016, Michael Angstadt All rights reserved. Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met: 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer. 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS “AS IS” AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY,  OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.]]></string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="ux_options">UX Options</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="default_ux">Default UX</string>
    <string name="custom_ux">Custom UX</string>

    <string name="network_error_title">Network Error</string>
    <string name="network_error_body">There is a problem connecting with the server. error: Authorization failed due to a network error</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>

    <string name="auth_error">Auth Error</string>
    <string name="invalid_credentials">There was an authentication error: Authorization failed - the credential is invalid</string>
    <string name="privacy_policy"><![CDATA[How-to & Privacy]]></string>
    <string name="terms_condition">Terms of Service</string>
    <string name="attribution">Attributions</string>
    <string name="select_option">Select Option</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="un_sign_in"><u>Sign in</u></string>
    <string name="un_sign_up"><u>Sign up</u></string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="hello_signin"><b>Hello, Sign in!</b></string>
    <string name="create_your_account"><b>Create Your Account</b></string>
    <string name="create_your_linxymarks">Create your Linxy Mark in 3 easy steps</string>
    <string name="select_a_photo">Select a photo to Linxy Mark</string>
    <string name="choose_a_video">Choose a Video to Play</string>
    <string name="almost_done">Almost done!</string>
    <string name="my_linxy_marks">My Linxy Marks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
