<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Select Option"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/privacypolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/privacy_policy"
        android:textColor="@android:color/black"
        android:textSize="18dp" />


    <TextView
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/terms_condition"
        android:textColor="@android:color/black"
        android:textSize="18dp" />


    <TextView
        android:id="@+id/attribution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/attribution"
        android:textColor="@android:color/black"
        android:textSize="18dp" />


    <TextView
        android:visibility="gone"
        android:id="@+id/changelanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Change Language"
        android:textColor="@android:color/black"
        android:textSize="18dp" />


</LinearLayout>