<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity"
    android:orientation="vertical"
    android:background="@drawable/bg_signup"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="16dp"
            android:text="@string/create_your_account"
            android:textSize="24sp"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:hint="Name"
            android:background="@drawable/border_bottom"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="18dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/border_bottom"
            android:hint="Email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:password="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:password="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />
        <Button
            android:layout_width="140dp"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:onClick="onRegisterPress"
            android:layout_gravity="end"
            android:text="@string/sign_up"
            android:textSize="14sp"
            android:background="@drawable/btn_round_trans"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="end"
        android:gravity="right"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textFontWeight="900"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="onLoginPress"
            android:text="@string/un_sign_in"
            android:textSize="15sp"
            android:background="@color/transparent"
            />
    </LinearLayout>
</LinearLayout>